test_suite/alan-2022-examples/failing/005010_mutation.alan
source rtf6 begin leave l and x relax end
